<resources>
    <string name="app_name">Screen Timeout Tile</string>
    <string name="tile_label">Screen Timeout</string>
    <string name="about">About</string>

    <string name="seconds_short">s</string>
    <string name="seconds_long">seconds</string>
    <string name="minutes_short">m</string>
    <string name="minutes_long">minutes</string>
    <string name="hours_short">h</string>
    <string name="hours_long">hours</string>
    <string name="never">Never</string>

    <string name="notification_title">Timeout Changed</string>
    <string name="notification_content">Your screen timeout is now %s.</string>

    <string name="grant_permissions">Grant Permissions</string>
    <string name="language">Language:</string>
    <string name="auto">auto</string>
    <string name="presets">Presets:</string>
    <string name="new_">New</string>
    <string name="range_error">Must be between 1 and %d.</string>
    <string name="other">Other:</string>
    <string name="notifications">Notifications</string>

    <string name="developer">Developer: Henry Bersey</string>
    <string name="translators">Translators:</string>

    <string name="language_fr">French</string>
    <string name="language_en">English</string>
    <string name="language_it">Italian</string>
    <string name="language_ru">Russian</string>
</resources>